test/testdata/number/times_negative_int_string_error.lox
print -1 * "hello"; // error: cannot multiply string by negative number
